--- a/pom.xml
+++ b/pom.xml
@@ -1,97 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-   
-	<groupId>prakash.co.com.das</groupId>
-	<artifactId>prakashtest</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<name>prakash</name>
-	<description>project for prakash</description>
-
-	<properties>
-		<java.version>11</java.version>
-		
-		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
-		<springfox-swagger2>2.9.2</springfox-swagger2>
-	</properties>
-
-	
-
-	<dependencies>
-		
-		
-		
-		
-		
-		
-		
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.6</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mybatis.spring.boot</groupId>
-			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>2.1.0</version>
-			
-		</dependency>
-		
-	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<release>11</release>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<configuration>
-					<argLine>
-					</argLine>
-				</configuration>
-			</plugin>
-			
-			<plugin>
-				<groupId>org.mybatis.generator</groupId>
-				<artifactId>mybatis-generator-maven-plugin</artifactId>
-				<version>1.4.0</version>
-				
-				<executions>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>org.mybatis.generator</groupId>
-						<artifactId>mybatis-generator-core</artifactId>
-						<version>1.4.0</version>
-					</dependency>
-					
-				</dependencies>
-			</plugin>
-			<plugin>
-	          <groupId>org.apache.maven.plugins</groupId>
-	          <artifactId>maven-checkstyle-plugin</artifactId>
-	         
-	          <executions>
-	            <execution>
-	              <id>checkstyle</id>
-	              <goals>
-	                <goal>check</goal>
-	              </goals>
-	            </execution>
-	          </executions>
-	          
-	          
-	        </plugin>
-		</plugins>
-
-	</build>
-
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+ 
+  <groupId>org.codehaus.mojo</groupId>
+  <artifactId>my-project</artifactId>
+  <version>1.0</version>
 </project>
